src/test/deca/context/invalid/SansObjet/DeclVar-And-boolean-int-string.deca
// Description:
//    Declaration of a boolean variable using && operation between a int variable and string .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    string y = "World"; 
    boolean z = 2 && "World"; 
}
